--- a/site/layouts/docs/list.html
+++ b/site/layouts/docs/list.html
@@ -1,23 +1,15 @@
 {{ define "main" }}
-<div class="td-content">
-	<h1>{{ .Title }}</h1>
-  {{ with .Params.description }}<div class="lead">{{ . | markdownify }}</div>{{ end }}
-	<header class="article-meta">
-		{{ partial "taxonomy_terms_article_wrapper.html" . }}
-		{{ if (and (not .Params.hide_readingtime) (.Site.Params.ui.readingtime.enable)) }}
-			{{ partial "reading-time.html" . }}
-		{{ end }}
-	</header>
-	{{ .Content }}
-        {{ partial "section-index.html" . }}
-	{{ if (and (not .Params.hide_feedback) (.Site.Params.ui.feedback.enable) (.Site.GoogleAnalytics)) }}
-		{{ partial "feedback.html" .Site.Params.ui.feedback }}
-		<br />
-	{{ end }}
-	{{ if (.Site.DisqusShortname) }}
-		<br />
-		{{ partial "disqus-comment.html" . }}
-	{{ end }}
-	{{ partial "page-meta-lastmod.html" . }}
+<div class="container">
+  <h1>{{ .Title }}</h1>
+    {{ .Content }}
+      {{ range .Pages }}
+        {{ $customTitle := .Title }}
+        {{ if .Params.customTitle }}
+          {{ $customTitle = index $.Site.Params .Params.customTitle }}
+        {{ end }}
+        <div id="{{ $customTitle | urlize }}" class="{{ .File.BaseFileName }}">
+          <h2>{{ $customTitle }}</h2>
+        </div>
+  {{ end }}
 </div>
 {{ end }}
