update file names and comment

--- a/site/layouts/shortcodes/libraryTable.html
+++ b/site/layouts/shortcodes/libraryTable.html
@@ -31,7 +31,7 @@
       {{ if eq .gcpProductDocs "N/A" -}}
       N/A
       {{ else -}}
-      <a href="{{- .gcpProductDocs -}}">{{- .name_pretty -}}
+      <a href="{{- .gcpProductDocs -}}">{{- .namePretty -}}
         {{ end -}}
     </td>
   </tr>
